--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APP NAME: A Coding Challenge by Rex Lundstrom</title>
+    <title>STADIUM STATS: A Coding Challenge by Rex Lundstrom</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +42,7 @@
         <div class="container">
           <a class="navbar-brand" href="/index.html">
             <img src="/img/rex-icon.png" height="40" alt="" />
-            &nbsp; &nbsp; APP NAME
+            &nbsp; &nbsp; STADIUM STATS
           </a>
           <button
             class="navbar-toggler"
@@ -58,7 +58,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/app.html">The App</a>
@@ -67,17 +72,28 @@
                 <a class="nav-link" href="/code.html">The Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="https://github.com/rexlundstrom"
+                <a
+                  class="nav-link"
+                  target="_blank"
+                  href="https://github.com/rexlundstrom"
                   >The Repo</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="https://rex-portfolio.netlify.app/"
+                <a
+                  class="nav-link"
+                  target="_blank"
+                  href="https://rex-portfolio.netlify.app/"
                   >About</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="https://rex-portfolio.netlify.app/#blog">Blog</a>
+                <a
+                  class="nav-link"
+                  target="_blank"
+                  href="https://rex-portfolio.netlify.app/#blog"
+                  >Blog</a
+                >
               </li>
             </ul>
           </div>
@@ -90,33 +106,45 @@
         class="row row-cols-1 row-cols-md-2 h-100 align-items-center gy-3 py-5"
       >
         <div class="col text-center d-flex flex-column">
-          <h1 class="display-5">APP NAME</h1>
+          <h1 class="display-5">STADIUM STATS</h1>
           <h2 class="display-5">Coding Challenge</h2>
-          <h4 class="lead">Your project description goes here - CHANGE ME</h4>
+          <h4 class="lead">
+            SuperDog Events is an event company the produces comic cons. The
+            marketing team has requested a site that displays stats from their
+            events. You are given an array of event data to build a site.
+          </h4>
+          <h4 class="lead fw-bolder">Requirements:</h4>
           <ul class="checklist text-start mx-auto">
             <li>
               <i class="bi bi-check-square-fill"></i>
-              <span>CSS and Bootstrap Layout</span>
+              <span>Total attendance by city</span>
             </li>
             <li>
               <i class="bi bi-check-square-fill"></i>
-              <span>JavaScript Fundamentals</span>
+              <span>Average attendance</span>
             </li>
             <li>
               <i class="bi bi-check-square-fill"></i>
-              <span>JavaScript Loops</span>
+              <span>Least attended event</span>
             </li>
             <li>
               <i class="bi bi-check-square-fill"></i>
-              <span>JavaScript DOM Manipulation</span>
+              <span>Most attended event</span>
             </li>
             <li>
               <i class="bi bi-check-square-fill"></i>
-              <span>Boolean Logic</span>
+              <span>Show these stats for all events</span>
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i>
+              <span
+                >The ability to add additional events and store the events in
+                local storage</span
+              >
             </li>
           </ul>
           <div class="text-center">
-            <a href="/app.html" class="btn btn-outline-primary btn-large"
+            <a href="/app.html" class="btn btn-outline-primary btn-large w-50"
               >Try it out!</a
             >
           </div>
@@ -135,9 +163,9 @@
           class="col d-flex align-items-center justify-content-center order-first order-md-last"
         >
           <img
-            src="/img/APPNAMELogo.svg"
+            src="/img/stadium.png"
             class="img-fluid appLogo"
-            alt="APP NAME logo"
+            alt="STADIUM STATS logo"
           />
         </div>
       </div>
