--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
           <h1 class="display-5">STADIUM STATS</h1>
           <h2 class="display-5">Coding Challenge</h2>
           <h4 class="lead">
-            SuperDog Events is an event company the produces comic cons. The
-            marketing team has requested a site that displays stats from their
-            events. You are given an array of event data to build a site.
+            An event company that produces conventions wants to get a handle on
+            their numbers. The marketing team has requested a site that displays
+            stats from their events. You are given an array of event data to
+            build a site.
           </h4>
           <h4 class="lead fw-bolder">Requirements:</h4>
           <ul class="checklist text-start mx-auto">
