--- a/app.html
+++ b/app.html
@@ -295,7 +295,7 @@
     </template>
 
     <template id="tableRowTemplate">
-      <tr>
+       <tr data-bs-toggle="modal" data-bs-target="#editEvent" role="button" onclick="editEvent(this)">
         <td data-id="event"></td>
         <td data-id="city"></td>
         <td data-id="state"></td>
@@ -303,7 +303,7 @@
         <td data-id="date"></td>
       </tr>
     </template>
-
+    <!-- new event modal -->
     <div
       class="modal fade"
       id="exampleModal"
@@ -434,6 +434,157 @@
               onclick="saveNewEvent()"
             >
               Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- edit event modal -->
+
+    <div
+      class="modal fade"
+      id="editEvent"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="editEventTitle">Edit Event</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <input type="hidden" id="editEventId">
+              <div class="form-group">
+                <label for="edit-event-name" class="col-form-label"
+                  >Event:</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Event"
+                  id="editEventName"
+                />
+              </div>
+              <div class="form-group">
+                <label for="edit-city-name" class="col-form-label">City:</label>
+                <input
+                  type="text"
+                  placeholder="City"
+                  class="form-control"
+                  id="editCityName"
+                />
+              </div>
+              <div class="form-group">
+                <label for="edit-state-name" class="col-form-label"
+                  >State:</label
+                >
+                <select class="form-control" id="editEventState">
+                  <option value="">Select a state</option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="CT">Connecticut</option>
+                  <option value="DE">Delaware</option>
+                  <option value="DC">District Of Columbia</option>
+                  <option value="FL">Florida</option>
+                  <option value="GA">Georgia</option>
+                  <option value="HI">Hawaii</option>
+                  <option value="ID">Idaho</option>
+                  <option value="IL">Illinois</option>
+                  <option value="IN">Indiana</option>
+                  <option value="IA">Iowa</option>
+                  <option value="KS">Kansas</option>
+                  <option value="KY">Kentucky</option>
+                  <option value="LA">Louisiana</option>
+                  <option value="ME">Maine</option>
+                  <option value="MD">Maryland</option>
+                  <option value="MA">Massachusetts</option>
+                  <option value="MI">Michigan</option>
+                  <option value="MN">Minnesota</option>
+                  <option value="MS">Mississippi</option>
+                  <option value="MO">Missouri</option>
+                  <option value="MT">Montana</option>
+                  <option value="NE">Nebraska</option>
+                  <option value="NV">Nevada</option>
+                  <option value="NH">New Hampshire</option>
+                  <option value="NJ">New Jersey</option>
+                  <option value="NM">New Mexico</option>
+                  <option value="NY">New York</option>
+                  <option value="NC">North Carolina</option>
+                  <option value="ND">North Dakota</option>
+                  <option value="OH">Ohio</option>
+                  <option value="OK">Oklahoma</option>
+                  <option value="OR">Oregon</option>
+                  <option value="PA">Pennsylvania</option>
+                  <option value="RI">Rhode Island</option>
+                  <option value="SC">South Carolina</option>
+                  <option value="SD">South Dakota</option>
+                  <option value="TN">Tennessee</option>
+                  <option value="TX">Texas</option>
+                  <option value="UT">Utah</option>
+                  <option value="VT">Vermont</option>
+                  <option value="VA">Virginia</option>
+                  <option value="WA">Washington</option>
+                  <option value="WV">West Virginia</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="edit-attendance" class="col-form-label"
+                  >Attendance:</label
+                >
+                <input
+                  type="number"
+                  placeholder="Attendance"
+                  class="form-control"
+                  id="editAttendance"
+                />
+              </div>
+              <div class="form-group">
+                <label for="edit-event-date" class="col-form-label"
+                  >Event:</label
+                >
+                <input type="date" class="form-control" id="editEventDate" />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary me-auto"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              data-bs-dismiss="modal"
+              onclick="deleteEvent()"
+            >
+              Delete Event
+            </button>
+            <!-- update onclick value -->
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+              onclick="updateEvent()"
+            >
+              Save Changes
             </button>
           </div>
         </div>
