--- a/app.html
+++ b/app.html
@@ -269,10 +269,10 @@
             </a>
           </div>
           <div class="col text-md-end">
-            <a href="https://linkedin.com"
+            <a href="https://www.linkedin.com/in/rex-lundstrom/"
               ><i class="bi bi-linkedin p-2 social-icons"></i
             ></a>
-            <a href="https://github.com"
+            <a href="https://github.com/rexlundstrom"
               ><i class="bi bi-github p-2 social-icons"></i
             ></a>
           </div>
@@ -295,7 +295,12 @@
     </template>
 
     <template id="tableRowTemplate">
-       <tr data-bs-toggle="modal" data-bs-target="#editEvent" role="button" onclick="editEvent(this)">
+      <tr
+        data-bs-toggle="modal"
+        data-bs-target="#editEvent"
+        role="button"
+        onclick="editEvent(this)"
+      >
         <td data-id="event"></td>
         <td data-id="city"></td>
         <td data-id="state"></td>
@@ -463,7 +468,7 @@
           </div>
           <div class="modal-body">
             <form>
-              <input type="hidden" id="editEventId">
+              <input type="hidden" id="editEventId" />
               <div class="form-group">
                 <label for="edit-event-name" class="col-form-label"
                   >Event:</label
