typo and nav link to repo now correct

--- a/code.html
+++ b/code.html
@@ -73,7 +73,7 @@
                 <a
                   class="nav-link"
                   target="_blank"
-                  href="https://github.com/rexlundstrom"
+                  href="https://github.com/rexlundstrom/event-planner"
                   >The Repo</a
                 >
               </li>
@@ -389,7 +389,7 @@ const saveNewEvent = () => {
             Finally, <b>getEventData</b> and <b>saveNewEvent</b> contain my
             favorite functionalities. By referencing your machine's local
             storage, each of them are able to manipulate .JSON files, turning
-            the into strings or objects as needed, to execute or store your
+            them into strings or objects as needed, to execute or store your
             inputs respectively, even when you refresh or close the page.
           </p>
         </div>
