--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a
                   class="nav-link"
                   target="_blank"
-                  href="https://github.com/rexlundstrom"
+                  href="https://github.com/rexlundstrom/event-planner"
                   >The Repo</a
                 >
               </li>
